; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_sig.c_process_explicit_exit_notification_init.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_sig.c_process_explicit_exit_notification_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.context = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32, i32 }

@M_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [52 x i8] c"SIGTERM received, sending exit notification to peer\00", align 1
@now = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.context*)* @process_explicit_exit_notification_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @process_explicit_exit_notification_init(%struct.context* %0) #0 {
  %2 = alloca %struct.context*, align 8
  store %struct.context* %0, %struct.context** %2, align 8
  %3 = load i32, i32* @M_INFO, align 4
  %4 = call i32 @msg(i32 %3, i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str, i64 0, i64 0))
  %5 = load %struct.context*, %struct.context** %2, align 8
  %6 = getelementptr inbounds %struct.context, %struct.context* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 1
  %8 = call i32 @event_timeout_init(i32* %7, i32 1, i32 0)
  %9 = load %struct.context*, %struct.context** %2, align 8
  %10 = call i32 @reset_coarse_timers(%struct.context* %9)
  %11 = load %struct.context*, %struct.context** %2, align 8
  %12 = getelementptr inbounds %struct.context, %struct.context* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @signal_reset(i32 %13)
  %15 = call i32 (...) @halt_non_edge_triggered_signals()
  %16 = load i32, i32* @now, align 4
  %17 = load %struct.context*, %struct.context** %2, align 8
  %18 = getelementptr inbounds %struct.context, %struct.context* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  store i32 %16, i32* %19, align 4
  ret void
}

declare dso_local i32 @msg(i32, i8*) #1

declare dso_local i32 @event_timeout_init(i32*, i32, i32) #1

declare dso_local i32 @reset_coarse_timers(%struct.context*) #1

declare dso_local i32 @signal_reset(i32) #1

declare dso_local i32 @halt_non_edge_triggered_signals(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
